syntax = "proto3";

package dhpcs.liquidity.actor.protocol.zonemonitor;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.zonemonitor";

import "google/protobuf/struct.proto";

import "dhpcs/liquidity/model.proto";

message ActiveZoneSummary {
    string zone_id = 1;
    int32 members = 2;
    int32 accounts = 3;
    int32 transactions = 4;
    google.protobuf.Struct metadata = 5;
    repeated bytes client_connections = 6;
}

message UpsertActiveZoneSummary {
    string zone_validator = 1;
    ActiveZoneSummary active_zone_summary = 2;
}
